fix styles(details): alignment

--- a/src/app/features/credential-details/credential-details.component.scss
+++ b/src/app/features/credential-details/credential-details.component.scss
@@ -27,7 +27,6 @@
   border: none;
   padding: 0;
   position: absolute;
-  top: 10px;
   left: 12px;
   color: inherit;
   text-decoration: none;
@@ -70,8 +69,7 @@ mat-card-content.basic-actions-card-content{
   }
 }
 .side-flexing{
-  flex: 1 1 auto;
-  width: min(300px, 40%);
+  width: auto;
 }
 .actions-container{
     padding-inline: 16px 0px;
@@ -277,6 +275,10 @@ mat-card-content.basic-actions-card-content{
     }
   }
 
+  .side-flexing{
+    width: min(300px, 40%);
+  }
+
   .power-alert{
     height:22px;
   }
@@ -286,7 +288,7 @@ mat-card-content.basic-actions-card-content{
 @media(width > 1150px){
 
   .back-button{
-    top: 139px;
+    top: 135px;
     left: 23px;
   }
 
